--- a/public/driver.html
+++ b/public/driver.html
@@ -12,7 +12,7 @@
       <div class="lightbox-content w3-center">
         <span id="close-btn">&times;</span>
         <div class="circleB" style="top:50%; left:50%; transform:translate(-50%,-50%)">
-          <img id="lightImg" src="" alt="Profil">
+          <img id="lightImg" onclick="window.open(`fleuread.onrender.com/icon_changer?type=comptes&id=${sessionStorage.getItem('session_id')}`, '_blank');" src="" alt="Profil">
         </div>
         <h2 id="lightH2"></h2>
         <p id="lightP"></p>
