--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -64,7 +64,7 @@
           display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
-          background: linear-gradient(135deg, blue, red);
+          background: linear-gradient(135deg, green, yellow);
           font-family: Arial, sans-serif;
            box-sizing:border-box; 
       }
