--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -53,8 +53,7 @@
 
       async function getImageData(type, id) {
         const datas = await fetcher('getimagedata', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
-        const imgData = await datas.json();
-        console.log(imgData);
+        console.log(datas);
       }
 
       readParams();
