--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -13,8 +13,8 @@
       <div class="form-container w3-center">
         <p id="data_known" class="w3-center"></p>
         <img id="img_known" class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
-        <button>Utiliser une image d'internet</button>
-        <button>Importer une image</button>
+        <button id="from_internet">Utiliser une image d'internet</button>
+        <button id="from_computer">Importer une image</button>
       </div>
     <script>
       const offset = -((new Date().getTimezoneOffset()) / 60);
@@ -29,8 +29,6 @@
       } else {
         if (await check(sessionId)) {
         console.log("Connected");
-       await connectWebSocket();
-          await getMe();
         } else {
         sessionStorage.removeItem('session_id');
         console.log("Not connected");
