--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -106,7 +106,9 @@
         showToast(datas.message, datas.color);
       }
 
-      document.getElementById('')
+      document.getElementById('from_computer').addEventListener('click', () {
+        document.getElementById('file_input').click();
+      });
     </script>
     <style>
       body {
