--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -16,7 +16,7 @@
         <br>
         <button id="from_internet">Utiliser une image d'internet</button>
         <button id="from_computer">Importer une image</button>
-        <button id="return" onclick="window.history.back;">Retour</button>
+        <button hidden id="return" onclick="window.history.back();">Retour</button>
         <input class="display:none" id="file_input" type="file">
       </div>
     <script>
