--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -106,7 +106,7 @@
         showToast(datas.message, datas.color);
       }
 
-      document.getElementById('from_computer').addEventListener('click', () {
+      document.getElementById('from_computer').addEventListener('click', function () {
         document.getElementById('file_input').click();
       });
 
