--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -69,6 +69,20 @@
         } catch (err) {return err;}
       }
 
+       async function filefetcher (endpoint, body, method, auth) {
+        try {
+        const response = await fetch(`https://${url.host}/${endpoint}`,{
+          'method':method,
+          'headers' : {
+            'auth': auth
+          }, 
+          'body' : body
+        });
+        const data = await response.json();
+          return data;
+        } catch (err) {return err;}
+      }
+
       function showToast(message, color = '#4CAF50') {
         const toast = document.createElement('div');
         toast.classList.add('toast');
@@ -122,7 +136,7 @@
       async function transformToUrl (file) {
           const formData = new FormData();
           formData.append("file", file); // clé "file"
-          const dataAns = await fetcher('registerafile', formData, 'POST', sessionStorage.getItem('session_id'));
+          const dataAns = await filefetcher('registerafile', formData, 'POST', sessionStorage.getItem('session_id'));
           console.log(dataAns.url);
       }
     </script>
