--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -14,7 +14,7 @@
         <p id="data_known" class="w3-center"></p>
         <img id="img_known" class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
         <br>
-        <hidden button id="from_internet">Utiliser une image d'internet</button>
+        <button hidden id="from_internet">Utiliser une image d'internet</button>
         <button id="from_computer">Importer une image</button>
         <button id="return" onclick="window.history.back();">Retour</button>
         <input hidden class="display:none" id="file_input" accept="image/*" type="file">
