--- a/public/historique.html
+++ b/public/historique.html
@@ -15,6 +15,40 @@
         <img class="w3-center" src="https://res.cloudinary.com/devee5rfe/image/upload/v1754320567/OIP_lz4npc.jpg" alt="Logo Euréa">
       </div>
     <script>
+      const offset = -((new Date().getTimezoneOffset()) / 60);
+      console.log(offset);
+      
+          async function start() {
+      url = new URL(window.location.href);
+      sessionId = await sessionStorage.getItem('session_id');
+      if (!sessionId) {
+        console.log("Not connected");
+        window.location.href = `https://${url.hostname}`; 
+      } else {
+        if (await check(sessionId)) {
+        console.log("Connected");
+        } else {
+        sessionStorage.removeItem('session_id');
+        console.log("Not connected");
+        window.location.href = `https://${url.hostname}`; 
+        }
+      }
+            readParams();
+      }
+      async function check(id) {
+        const answer = await fetcher('checksession',{'id':id},'POST','noauth');
+        const bool = answer.value;
+        console.warn(bool);
+        if (bool) {
+          console.warn("true");
+          return true;
+        } else {
+          console.warn("false");
+          return false;
+        }
+      }
+      
+      start();
       async function fetcher (endpoint, body, method, auth) {
         try {
         const response = await fetch(`https://${url.host}/${endpoint}`,{
@@ -48,11 +82,11 @@
         const type = urlParams.get('type');
         const id = urlParams.get('id');
        //   showToast(`Résult : ${id} / ${action}`);
-        getImageData(type, id);
+        getHistorique(type, id);
       }
 
-      async function getImageData(type, id) {
-        const datas = await fetcher('getimagedata', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
+      async function getHistorique(type, id) {
+        const datas = await fetcher('gethistorique', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
       }
     </script>
     <style>
@@ -64,7 +98,7 @@
           display:flex;
           justify-content:center; /* aligné à l'horizontal */
           align-items:center; /* aligné en vertical */
-          background: linear-gradient(135deg, blue, red);
+          background: linear-gradient(135deg, yellow, red);
           font-family: Arial, sans-serif;
            box-sizing:border-box; 
       }
