--- a/public/icon_changer.html
+++ b/public/icon_changer.html
@@ -120,7 +120,7 @@
         const datas = await fetcher('getimagedata', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
         console.log(datas);
         imager.src = datas.icon;
-        data_known.innerHTML = `Identifiant : <strong>datas.id</strong>`;
+        data_known.innerHTML = `Identifiant : <strong>${datas.id}</strong>`;
         sessionStorage.setItem('true_id', datas.id);
       }
       
