--- a/public/historique.html
+++ b/public/historique.html
@@ -88,9 +88,16 @@
         const datas = await fetcher('gethistorique', {id:id, type:type}, 'POST', sessionStorage.getItem('session_id'));
         for (const item of datas) {
           const line = document.createElement('div');
-          const a = document.createElement('h1');
-          a.textContent = item.who;
-          document.getElementById('histocontainer').append(div);
+          const a = document.createElement('p');
+          a.textContent = `${item.who} a ${await convertToWords(item.content)} la ${item.benne}${item.what} (${item.type} → ${item.type})`;
+          line.append(a);
+          document.getElementById('histocontainer').append(line);
+        }
+      }
+
+      async function convertToWords (input) {
+        if (input == "1") {
+          return "changé";
         }
       }
     </script>
