--- a/public/admin.html
+++ b/public/admin.html
@@ -113,6 +113,22 @@
             <p id="panel_F_pb">27/08/2025 à 14h10</p>
             </div>
           </div>
+
+          <div id="panel_I">
+            <div class="w3-center" style="display:flex; flex-direction:row">
+            <p>Latitude</p>
+            <p id="panel_I_lat">45.4578191</p>
+            </div>
+            <div class="w3-center" style="display:flex; flex-direction:row">
+            <p>Longitude</p>
+            <p id="panel_I_lon">4.255457</p>
+            </div>
+            <div class="w3-center" style="display:flex; flex-direction:row">
+            <p>Altitude</p>
+            <p id="panel_I_alt">453 m</p>
+            </div>
+          </div>
+          
           <div id="panel_G">
             <button id="panel_G_button" onclick="window.open('fleuread.onrender.com/historique?type=benne&id=455', '_blank');">Voir l'historique</button>
           </div>
