--- a/public/admin.html
+++ b/public/admin.html
@@ -115,15 +115,15 @@
           </div>
 
           <div id="panel_I">
-            <div class="w3-center" style="display:flex; flex-direction:row">
+            <div class="w3-center" style="justify-content:space-round; display:flex; flex-direction:row">
             <p>Latitude</p>
             <p id="panel_I_lat">45.4578191</p>
             </div>
-            <div class="w3-center" style="display:flex; flex-direction:row">
+            <div class="w3-center" style="justify-content:space-round; display:flex; flex-direction:row">
             <p>Longitude</p>
             <p id="panel_I_lon">4.255457</p>
             </div>
-            <div class="w3-center" style="display:flex; flex-direction:row">
+            <div class="w3-center" style="justify-content:space-round; display:flex; flex-direction:row">
             <p>Altitude</p>
             <p id="panel_I_alt">453 m</p>
             </div>
