--- a/public/admin.html
+++ b/public/admin.html
@@ -1846,8 +1846,8 @@ document.getElementById('editer_a').onclick = async () => {
 }
         document.getElementById('panel_I_lat').textContent = fromServer.o;
         document.getElementById('panel_I_lon').textContent = fromServer.p;
-        document.getElementById('panel_I_alt').textContent = fromServer.q;
-         document.getElementById('panel_D_i').textContent = `${fromServer.e} m`;
+        document.getElementById('panel_I_alt').textContent = `${Math.round(parseFloat(fromServer.q))} m`;
+         document.getElementById('panel_D_i').textContent = fromServer.e;
         document.getElementById('panel_D_i').href = `https://www.google.com/maps?q=${fromServer.o},${fromServer.p}`;
          document.getElementById('panel_E_img').src = fromServer.l;
         document.getElementById('panel_E_h1').textContent = fromServer.f;
