--- a/public/admin.html
+++ b/public/admin.html
@@ -718,7 +718,7 @@ let generalDatas;
     const lon = e.latlng.lng;
 
     // Afficher les coordonnées
-  console.log(`Latitude: ${lat.toFixed(6)}, Longitude: ${lng.toFixed(6)}`);
+  console.log(`Latitude: ${lat.toFixed(6)}, Longitude: ${lon.toFixed(6)}`);
    if (changerState) {
      showToast("Nouvelle position enregistrée.", "green");
 
