--- a/public/historique.html
+++ b/public/historique.html
@@ -153,6 +153,7 @@
       button:hover {
         background-color:red;
       }
+      # histocontainer {width:100%;}
       img {
         max-width:80%;
         height:auto;
